# opawhisperGroq

./: .gitignore  CLAUDE.md  README.md  config.example.ini  dictate.py  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
data/: soupawhisper.desktop
docker/: Dockerfile.linux
scripts/: benchmark_models.py  diagnose.py  diagnose_audio.py  diagnose_keys.py  install-desktop.sh  install-macos.sh  install-windows.ps1  soupawhisper.command
src/soupawhisper/: __init__.py  __main__.py  app.py  audio.py  clipboard.py  config.py  constants.py  lock.py  logging.py  output.py  transcribe.py  transcription_handler.py  ui_events.py  worker.py
src/soupawhisper/backend/: __init__.py  base.py  darwin.py  key_compare.py  key_compare_darwin.py  key_compare_default.py  keys.py  pynput_listener.py  wayland.py  windows.py  x11.py
src/soupawhisper/gui/: __init__.py  app.py  base.py  components.py  history_tab.py  hotkey.py  hotkey_selector.py  keyboard.py  settings_tab.py  tray.py  worker.py
src/soupawhisper/providers/: __init__.py  base.py  faster_whisper.py  mlx.py  mlx_server.py  mlx_server_manager.py  model_names.py  model_preloader.py  models.py  openai_compatible.py  registry.py
src/soupawhisper/storage/: __init__.py  debug.py  history.py
src/soupawhisper/tui/: __init__.py  app.py  settings_registry.py  styles.tcss  worker_controller.py
src/soupawhisper/tui/screens/: __init__.py  history.py  settings.py
src/soupawhisper/tui/widgets/: __init__.py  hotkey_capture.py  hotkey_input.py  model_manager.py  status_bar.py  waveform.py
tests/: __init__.py  conftest.py  run_full_test.sh  run_web_app.py  test_app.py  test_audio.py  test_backend_darwin.py  test_backend_detect.py  test_backend_stop.py  test_backend_x11.py  test_clipboard.py  test_config.py  test_darwin_permissions.py  test_debug_storage.py  test_e2e_wayland.py  test_editable_field.py  test_gui_e2e.py  test_gui_integration.py  test_history_storage.py  test_hotkey_capture.py  test_hotkey_capture_integration.py  test_hotkey_capture_widget.py  test_hotkey_e2e.py  test_icon.py  test_key_compare.py  test_keyboard_mapping.py  test_lock.py  test_macos_right_control.py  test_mlx_server.py  test_mlx_threading.py  test_model_download.py  test_model_preload.py  test_output.py  test_playwright_e2e.py  test_provider_performance.py  test_providers.py  test_real_audio_e2e.py  test_settings_persistence.py  test_settings_registry.py  test_transcribe.py  (+16 more)
