[project]
name = "soupawhisper"
version = "2.0.0"
description = "Voice dictation tool using Groq Whisper API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pynput>=1.8.1",
    "requests>=2.32.5",
    "evdev>=1.7.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
soupawhisper = "soupawhisper.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soupawhisper"]
