[project]
name = "soupawhisper"
version = "2.0.0"
description = "Voice dictation tool using Groq Whisper API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pynput>=1.8.1",
    "requests>=2.32.5",
    "evdev>=1.7.0; sys_platform == 'linux'",
    "textual>=0.50.0",
    "pillow>=10.0.0",
    "pyperclip>=1.8.0; sys_platform == 'win32'",
    "mlx-whisper>=0.4.3",
    "faster-whisper>=1.2.1",
    "textual-serve>=1.1.3",
]

[project.optional-dependencies]
tray = [
    "pygobject>=3.50.0; sys_platform == 'linux'",
]
# macOS Apple Silicon - optimized for Metal GPU
mlx = [
    "mlx-whisper>=0.4.0; sys_platform == 'darwin'",
]
# Cross-platform local transcription (Linux/Windows/macOS Intel)
local = [
    "faster-whisper>=1.0.0",
]
# All local providers
all-local = [
    "mlx-whisper>=0.4.0; sys_platform == 'darwin'",
    "faster-whisper>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "textual-dev>=1.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
soupawhisper = "soupawhisper.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soupawhisper"]

[tool.hatch.build.targets.wheel.force-include]
"src/soupawhisper/tui" = "soupawhisper/tui"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "performance: marks tests as performance tests (may require API keys or local models)",
    "integration: marks tests as integration tests (require external dependencies like MLX server)",
]

[dependency-groups]
dev = [
    "playwright>=1.57.0",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "uvicorn>=0.40.0",
]
